[gd_scene load_steps=5 format=3 uid="uid://dxbn6kj0q31dv"]

[ext_resource type="Script" path="res://ui/build_menu/room_panel.gd" id="1_bcowx"]
[ext_resource type="Texture2D" uid="uid://d5ah5g3ygowb" path="res://ui/build_menu/ui_atlas.tres" id="1_j4p6n"]
[ext_resource type="Theme" uid="uid://bkil8skpq2tu2" path="res://ui/main_theme.tres" id="2_hjdqd"]
[ext_resource type="Texture2D" uid="uid://b6qtq5nluodeo" path="res://ui/icons/rock_ui.png" id="4_cfip4"]

[node name="RoomPanel" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -244.5
offset_top = -60.0
offset_right = 244.5
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(244, 60)
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_hjdqd")
script = ExtResource("1_bcowx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="BoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_hjdqd")

[node name="RoomIcon" type="TextureRect" parent="MarginContainer/BoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("1_j4p6n")
stretch_mode = 5

[node name="RoomName" type="Label" parent="MarginContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_hjdqd")
text = "Bedroom"

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("2_hjdqd")
theme_type_variation = &"PriceContainer"

[node name="VBoxContainer" type="HBoxContainer" parent="MarginContainer/BoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = -15

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/BoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = -10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = -10

[node name="TextureRect" type="TextureRect" parent="MarginContainer/BoxContainer/PanelContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("4_cfip4")
stretch_mode = 6

[node name="RoomCost" type="Label" parent="MarginContainer/BoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_hjdqd")
theme_override_colors/font_color = Color(0.220465, 0.0763695, 0.285799, 1)
theme_override_font_sizes/font_size = 32
text = "10"
